--- a/app/src/main/res/layout/layout_classroom_setting.xml
+++ b/app/src/main/res/layout/layout_classroom_setting.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:clickable="true">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
