--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="round_img_border_">#888888</color>
     <color name="blur_float_up_bg">#88000000</color>
     <color name="red_bg">#ff4d30</color>
-    <color name="classroom_main_gray">#f04e4e4e</color>
+    <color name="classroom_main_gray">#4e4e4e</color>
     <color name="classroom_dark_gray">#333333</color>
     <color name="classroom_light_gray">#999999</color>
     <color name="classroom_normal_gray">#666666</color>
