教室，教室课件样式调整，画笔效果调整

--- a/app/src/main/res/layout/layout_wb_handwriting_pop.xml
+++ b/app/src/main/res/layout/layout_wb_handwriting_pop.xml
@@ -2,16 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:paddingLeft="@dimen/px20"
-              android:paddingRight="@dimen/px20"
-              android:paddingBottom="@dimen/px20"
+              android:padding="@dimen/px20"
               android:orientation="vertical">
 
     <cn.xiaojs.xma.ui.classroom.whiteboard.widget.PaintPathPreview
             android:id="@+id/doodle_paint_preview"
             android:layout_width="match_parent"
             android:layout_height="@dimen/px100"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center_horizontal"
             android:gravity="center"/>
 
     <LinearLayout
@@ -31,7 +29,7 @@
 
         <SeekBar
                 android:id="@+id/paint_thickness"
-                android:layout_width="@dimen/px220"
+                android:layout_width="@dimen/px210"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/px10"
                 android:layout_gravity="center_vertical"
