增加图片浏览下载的通用界面， 修改个人主页滑动bug， 增加直播课动态效果

--- a/app/src/main/res/layout/activity_test_api.xml
+++ b/app/src/main/res/layout/activity_test_api.xml
@@ -19,12 +19,14 @@
             android:layout_height="wrap_content"
             android:text="send verify code"
             android:onClick="btnClicked"/>
+
     <Button
             android:id="@+id/btn_svm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="verify mobile"
             android:onClick="btnClicked"/>
+
     <Button
             android:id="@+id/btn_q"
             android:layout_width="wrap_content"
@@ -36,5 +38,40 @@
             android:id="@+id/loading"
             android:layout_width="20dp"
             android:layout_height="20dp"/>
+
+    <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <View
+                android:background="@drawable/trans_30_circle"
+                android:layout_width="@dimen/px120"
+                android:layout_height="@dimen/px120"/>
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            <cn.xiaojs.xma.ui.view.AnimationView
+                    android:id="@+id/animation"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/live_animation"/>
+
+            <TextView
+                    android:layout_marginTop="@dimen/px10"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_26px"
+                    android:text="直播中"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+
+    </FrameLayout>
+
 
 </LinearLayout>
