--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -254,7 +254,7 @@
         <!-- 半透明 -->
         <item name="android:windowIsTranslucent">true</item>
         <!-- 背景透明 -->
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/translucent_30</item>
         <!-- 对话框是否有遮盖 -->
         <item name="android:windowContentOverlay">@null</item>
         <!-- 设置是否背景模糊 -->
