--- a/app/src/main/res/layout/layout_classroom_contact_item.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_item.xml
@@ -3,9 +3,7 @@
               xmlns:roundimg="http://schemas.android.com/apk/res-auto"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:paddingTop="@dimen/px15"
-              android:paddingBottom="@dimen/px15"
-              android:paddingLeft="@dimen/px20"
+              android:paddingLeft="@dimen/px5"
               android:paddingRight="@dimen/px5"
               android:gravity="center_vertical">
 
@@ -13,21 +11,24 @@
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/multi_check_selector"
-            android:layout_marginRight="@dimen/px20"/>
+            android:layout_marginLeft="@dimen/px10"
+            android:layout_marginRight="@dimen/px5"
+            android:src="@drawable/multi_check_selector"/>
 
-    <cn.xiaojs.xma.ui.widget.RoundedImageView
+    <cn.xiaojs.xma.ui.widget.MessageImageView
             android:id="@+id/portrait"
-            android:layout_width="@dimen/px56"
-            android:layout_height="@dimen/px56"
+            android:layout_width="@dimen/px86"
+            android:layout_height="@dimen/px86"
             roundimg:oval="true"
+            roundimg:isCircle="true"
             roundimg:border_color="@color/white"
+            android:padding="@dimen/px15"
             roundimg:border_width="@dimen/px2"/>
 
     <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_marginLeft="@dimen/px12"
+            android:layout_marginLeft="@dimen/px2"
             android:layout_marginRight="@dimen/px12"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
