--- a/app/src/main/res/layout/layout_classroom_chat_contact_item.xml
+++ b/app/src/main/res/layout/layout_classroom_chat_contact_item.xml
@@ -2,20 +2,21 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:roundimg="http://schemas.android.com/apk/res-auto"
-        android:layout_width="@dimen/px90"
-        android:layout_height="@dimen/px90">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <cn.xiaojs.xma.ui.widget.MessageImageView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:roundimg="http://schemas.android.com/apk/res-auto"
             android:id="@+id/portrait"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             android:layout_width="@dimen/px86"
             android:layout_height="@dimen/px86"
             roundimg:oval="true"
             roundimg:isCircle="true"
             roundimg:border_color="@color/white"
-            android:padding="@dimen/px15"
+            android:paddingLeft="@dimen/px20"
+            android:paddingRight="@dimen/px20"
             roundimg:border_width="@dimen/px2"/>
 
 </FrameLayout>
