--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -11,8 +11,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/px20">
+            android:orientation="horizontal">
 
         <cn.xiaojs.xma.ui.widget.MessageImageView
                 android:id="@+id/chat_btn"
