--- a/app/src/main/res/layout/fragment_white_board_management.xml
+++ b/app/src/main/res/layout/fragment_white_board_management.xml
@@ -29,9 +29,17 @@
             android:id="@+id/del_white_board"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="@dimen/px30"
+            android:src="@drawable/cr_del_wb"/>
+
+    <ImageView
+            android:id="@+id/white_board_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/open_docs"
             android:layout_marginRight="@dimen/px42"
-            android:src="@drawable/cr_del_wb"/>
+            android:src="@drawable/cr_wb_history"/>
 
     <GridView
             android:id="@+id/white_coll_list"
