教室，资料库页面，选择不同文档类型添加按下效果

--- a/app/src/main/res/layout/activity_classroom_document.xml
+++ b/app/src/main/res/layout/activity_classroom_document.xml
@@ -79,7 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_28px"
-                    android:textColor="@color/font_black"
+                    android:textColor="@drawable/cr_doc_txt_selector"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:text="@string/all"
@@ -90,7 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_28px"
-                    android:textColor="@color/font_black"
+                    android:textColor="@drawable/cr_doc_txt_selector"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:text="@string/ppt"
@@ -101,7 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_28px"
-                    android:textColor="@color/font_black"
+                    android:textColor="@drawable/cr_doc_txt_selector"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:text="@string/word"
@@ -112,7 +112,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_28px"
-                    android:textColor="@color/font_black"
+                    android:textColor="@drawable/cr_doc_txt_selector"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:text="@string/pdf"
@@ -123,7 +123,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_28px"
-                    android:textColor="@color/font_black"
+                    android:textColor="@drawable/cr_doc_txt_selector"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:text="@string/image"
@@ -134,7 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_28px"
-                    android:textColor="@color/font_black"
+                    android:textColor="@drawable/cr_doc_txt_selector"
                     android:paddingTop="@dimen/px20"
                     android:paddingBottom="@dimen/px20"
                     android:text="@string/hand_writing"
@@ -189,10 +189,10 @@
                     android:id="@+id/search"
                     android:layout_width="@dimen/px400"
                     android:layout_height="@dimen/px70"
-                    android:background="@color/main_bg"
+                    android:background="@drawable/cr_doc_search_bg"
                     android:padding="@dimen/px10"
                     android:textSize="@dimen/font_30px"
-                    android:textColor="@color/font_gray"
+                    android:textColor="@color/font_black"
                     android:layout_centerInParent="true"
                     android:layout_alignParentRight="true"
                     android:drawablePadding="@dimen/px8"
