--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="classroom_dark_gray">#333333</color>
     <color name="classroom_light_gray">#999999</color>
     <color name="classroom_normal_gray">#666666</color>
+    <color name="classroom_gray_1">#eeeeee</color>
     <color name="classroom_chat_bg">#686868</color>
     <color name="classroom_black_bg">#191919</color>
     <!--disable color, eg btn-->
