--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="main_blue">#0076ff</color>
     <color name="main_orange_pressed">#d27d2b</color>
     <color name="main_orange_disabled">#ffcc9b</color>
-    <color name="item_pressed">#f6f6f6</color>
+    <color name="item_pressed">#d7d7db</color>
     <color name="stroke_common">#e9e9e9</color>
     <color name="round_img_border">#88ffffff</color>
     <color name="round_img_border_">#888888</color>
